<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/containerBackgroundClr"

    android:layout_height="match_parent"
    tools:context=".DecryptionFragment"

    >

    <TextView
        android:id="@+id/shift_Text_View"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintHeight_percent="0.113"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_19sdp"
        android:text="@string/Shift_Value"
        android:fontFamily="serif"
        android:textColor="@color/txt_btn_Clr"
        android:textStyle="bold|italic"

        />
    <EditText
        android:id="@+id/shift_Edit_Text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintHeight_percent="0.09"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shift_Text_View"
        android:hint="@string/Shift_Value_Hint"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:fontFamily="serif"
        android:textColor="@color/black"
        />
<TextView
        android:id="@+id/Cipher_Txt_Text_View"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintHeight_percent="0.113"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/shift_Edit_Text"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_19sdp"
        android:textColor="@color/txt_btn_Clr"
        android:text="@string/Cipher_Text"
        android:fontFamily="serif"
    android:textStyle="bold|italic"

    />
    <EditText
        android:id="@+id/Cipher_Txt_Edit_Text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintHeight_percent="0.09"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Cipher_Txt_Text_View"
        android:hint="@string/Decryption_Cipher_Text_Hint"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:fontFamily="serif"
        android:textColor="@color/black"

        />
<TextView
        android:id="@+id/Plain_Txt_Text_View"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintHeight_percent="0.113"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/Cipher_Txt_Edit_Text"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_19sdp"
        android:textColor="@color/txt_btn_Clr"
        android:text="@string/Plain_Text"
        android:fontFamily="serif"
    android:textStyle="bold|italic"

    />
    <EditText
        android:id="@+id/Plain_Txt_Edit_Text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="1.0"
        app:layout_constraintHeight_percent="0.09"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Plain_Txt_Text_View"
        android:hint="@string/Decryption_Plain_Text_Hint"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:fontFamily="serif"
        android:textColor="@color/black"

        />
    <Button
        android:id="@+id/Decrypt_Btn"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Plain_Txt_Edit_Text"
        android:layout_marginTop="@dimen/_35sdp"
        android:textColor="@color/containerBackgroundClr"
        android:backgroundTint="@color/txt_btn_Clr"
        android:fontFamily="serif"
        android:textSize="@dimen/_19sdp"
        android:text="@string/Decrypt_Btn"
        android:textStyle="bold|italic"

        />
</androidx.constraintlayout.widget.ConstraintLayout>